--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="theme">#457B9D</color>
+    <color name="green">#86B347</color>
+    <color name="red">#D64D4D</color>
 </resources>
