--- a/app/src/main/res/layout/fragment_calendars.xml
+++ b/app/src/main/res/layout/fragment_calendars.xml
@@ -42,7 +42,7 @@
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
                 android:padding="10sp"
-                android:text="@string/free_button_question"
+                android:text="@string/free_button"
                 android:textColor="@color/design_default_color_background"
                 android:textSize="14sp"></TextView>
 
