--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1247,7 +1247,7 @@
                     android:layout_weight="4"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
-                    android:text="@string/nine_thirty_PM_block"
+                    android:text="@string/nine_PM_block"
                     android:textColor="@color/black"
                     android:textSize="14sp"></TextView>
 
@@ -1267,7 +1267,11 @@
         </TableLayout>
     </ScrollView>
 
-
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
 
 </LinearLayout>
