--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -23,8 +23,8 @@
 
     <Button
         android:id="@+id/goHome"
-        android:layout_width="407dp"
-        android:layout_height="53dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
         android:text="go Home"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,9 +33,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".CalendarsFragment"
         >
+    <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       >
 
         <TableLayout
             android:layout_width="match_parent"
@@ -179,10 +183,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -216,10 +220,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton4"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -253,10 +257,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -290,10 +294,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -327,10 +331,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton7"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -364,10 +368,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton8"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -401,10 +405,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton9"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -438,10 +442,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton10"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -475,10 +479,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton11"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -512,10 +516,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton12"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -549,10 +553,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton13"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -586,10 +590,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton14"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -623,10 +627,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton15"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -660,10 +664,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton16"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -697,10 +701,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton17"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -734,10 +738,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton18"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -771,10 +775,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton19"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -808,10 +812,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton20"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -845,10 +849,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton21"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -882,10 +886,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton22"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -919,10 +923,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton23"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -956,10 +960,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton24"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -993,10 +997,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton25"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1030,10 +1034,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton26"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1067,10 +1071,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton27"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1104,10 +1108,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton28"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1141,10 +1145,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton29"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1178,10 +1182,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton30"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1215,10 +1219,10 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton31"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
@@ -1252,19 +1256,36 @@
                     android:textSize="14sp"></TextView>
 
                 <Button
+                    android:id="@+id/availButton32"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:backgroundTint="@color/red"
                     android:gravity="center_horizontal"
                     android:padding="10sp"
                     android:text="@string/busy_button"
                     android:textColor="@color/white"
                     android:textSize="14sp"></Button>
 
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
+
             </TableRow>
 
         </TableLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_home" />
+
+
+    </LinearLayout>
     </ScrollView>
 
 
