--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -51,6 +51,7 @@
             <TableRow android:background="@color/theme">
 
                 <TextView
+                    android:id="@+id/date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
@@ -1228,49 +1229,6 @@
                     android:text="@string/busy_button"
                     android:textColor="@color/white"
                     android:textSize="14sp"></Button>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"
-                    android:padding="10sp"
-                    android:text="@string/set_date"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"></TextView>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"
-                    android:padding="10sp"
-                    android:text="@string/nine_thirty_PM_block"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"></TextView>
-
-                <Button
-                    android:id="@+id/availButton32"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"
-                    android:padding="10sp"
-                    android:text="@string/busy_button"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"></Button>
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
 
             </TableRow>
 
