--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -39,7 +39,7 @@
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       >
+        android:orientation="vertical">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -1230,6 +1230,19 @@
                     android:textColor="@color/white"
                     android:textSize="14sp"></Button>
 
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <Button
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_weight="4"
+                    android:padding="10sp"
+                    android:text="Save and CrossCheck"
+                    android:textColor="@color/black"
+                    />
             </TableRow>
 
         </TableLayout>
