--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,4 +4,15 @@
     android:layout_height="match_parent">
 
 
+    <Button
+        android:id="@+id/checkSharedEventsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="246dp"
+        android:layout_marginEnd="267dp"
+        android:layout_marginBottom="158dp"
+        android:text="Shared Events" />
 </RelativeLayout>
