--- a/app/src/main/res/layout/activity_calendar11.xml
+++ b/app/src/main/res/layout/activity_calendar11.xml
@@ -42,6 +42,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/goPrevious1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center_horizontal"
+        android:text="Previous Day"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -68,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="D1: mm/dd/yyyy"
+                    android:text="D11: mm/dd/yyyy"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
                     />
@@ -969,6 +980,20 @@
 
             <TableRow
                 android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <Button
+                    android:id="@+id/goPrevious2"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_weight="4"
+                    android:padding="10sp"
+                    android:text="Previous Day"
+                    android:textColor="@color/black"
+                    />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <Button
                     android:id="@+id/goHome2"
@@ -980,21 +1005,21 @@
                     android:textColor="@color/black" />
             </TableRow>
 
-                    </TableLayout>
+        </TableLayout>
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/floatingActionButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        app:srcCompat="@drawable/ic_home" />
-
-
-                </LinearLayout>
-                </ScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_home" />
 
 
+    </LinearLayout>
+    </ScrollView>
 
 
-            </LinearLayout>
+
+
+</LinearLayout>
