--- a/app/src/main/res/layout/activity_calendar14.xml
+++ b/app/src/main/res/layout/activity_calendar14.xml
@@ -32,12 +32,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/goNext1"
+        android:id="@+id/goPrevious1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginEnd="4dp"
         android:gravity="center_horizontal"
-        android:text="Next Day"
+        android:text="Previous Day"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="parent" />
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="D1: mm/dd/yyyy"
+                    android:text="D14: mm/dd/yyyy"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
                     />
@@ -957,12 +957,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
                 <Button
-                    android:id="@+id/goNext2"
+                    android:id="@+id/goPrevious2"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="Next Day"
+                    android:text="Previous Day"
                     android:textColor="@color/black"
                     />
             </TableRow>
@@ -980,21 +980,21 @@
                     android:textColor="@color/black" />
             </TableRow>
 
-                    </TableLayout>
+        </TableLayout>
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/floatingActionButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        app:srcCompat="@drawable/ic_home" />
-
-
-                </LinearLayout>
-                </ScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_home" />
 
 
+    </LinearLayout>
+    </ScrollView>
 
 
-            </LinearLayout>
+
+
+</LinearLayout>
