--- a/app/src/main/res/layout/activity_holy_shit.xml
+++ b/app/src/main/res/layout/activity_holy_shit.xml
@@ -57,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:onClick="logout"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu"></com.google.android.material.navigation.NavigationView>
 
