--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,4 +15,16 @@
         android:layout_marginEnd="267dp"
         android:layout_marginBottom="158dp"
         android:text="Shared Events" />
+
+    <Button
+        android:id="@+id/crossCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkSharedEventsButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="237dp"
+        android:layout_marginEnd="251dp"
+        android:layout_marginBottom="99dp"
+        android:text="CrossCheck" />
 </RelativeLayout>
