--- a/app/src/main/res/layout/activity_calendar3.xml
+++ b/app/src/main/res/layout/activity_calendar3.xml
@@ -949,6 +949,33 @@
                     android:textSize="14sp"></Button>
 
             </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"
+                    android:padding="10sp"
+                    android:text="@string/nine_thirty_PM_block"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"></TextView>
+
+                <Button
+                    android:id="@+id/availButton32"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"
+                    android:padding="10sp"
+                    android:text="@string/busy_button"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"></Button>
+
+            </TableRow>
+
 
             <TableRow
                 android:layout_width="match_parent"
