--- a/app/src/main/res/layout/activity_cross_check.xml
+++ b/app/src/main/res/layout/activity_cross_check.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".CrossCheck">
-
+    android:orientation="vertical"
+    tools:context=".CrossCheckResult">
 
 
     <TextView
         android:id="@+id/CrossCheckTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="46dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="monospace"
         android:gravity="center"
@@ -27,16 +27,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/enterUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="50dp"
+        android:layout_above="@+id/CrossCheckResultsList"
+        android:layout_marginBottom="22dp"
+        android:hint="Enter username"
+        android:textColorHint="#000000" />
+    <EditText
+        android:id="@+id/enterFriendUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:layout_above="@+id/CrossCheckResultsList"
+        android:layout_marginBottom="22dp"
+        android:hint="Enter your friend's username"
+        android:textColorHint="#000000" />
+
+    <Button
+        android:id="@+id/crossCheckResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:text="Get Result" />
+
     <ListView
         android:id="@+id/CrossCheckResultsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+</LinearLayout>
