--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,26 +5,13 @@
     //hello
 
     <Button
-        android:id="@+id/checkSharedEventsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="246dp"
-        android:layout_marginEnd="267dp"
-        android:layout_marginBottom="158dp"
-        android:text="Shared Events" />
-
-    <Button
         android:id="@+id/crossCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/checkSharedEventsButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="237dp"
         android:layout_marginEnd="251dp"
         android:layout_marginBottom="99dp"
-        android:text="CrossCheck" />
+        android:text="View Cross-Check Result" />
 </RelativeLayout>
