heaven on earth

--- a/app/src/main/res/layout/activity_calendar10.xml
+++ b/app/src/main/res/layout/activity_calendar10.xml
@@ -74,15 +74,15 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
+
                 <TextView
-                    android:layout_height="match_parent"
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="4"
-                    android:padding="10sp"
-                    android:text="D10: mm/dd/yyyy"
-                    android:textColor="@color/black"
                     android:gravity="center_horizontal"
-                    />
+                    android:padding="10sp"
+                    android:text="D10"
+                    android:textColor="@color/black" />
             </TableRow>
 
             <TableRow android:background="@color/theme">
@@ -1032,14 +1032,6 @@
             </TableRow>
 
         </TableLayout>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            app:srcCompat="@drawable/ic_home" />
 
 
     </LinearLayout>
