--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="D1: mm/dd/yyyy"
+                    android:text="D1"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
                     />
@@ -1008,16 +1008,8 @@
 
                     </TableLayout>
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/floatingActionButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        app:srcCompat="@drawable/ic_home" />
 
-
-                </LinearLayout>
+    </LinearLayout>
                 </ScrollView>
 
 
