--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text = "HELLO"
-        android:textSize="69dp"/>
+        android:layout_marginTop="200dp"
+        android:text = "Hello users!"
+        android:textSize="40dp"/>
 </RelativeLayout>
