--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,19 +6,25 @@
 
     <Button
         android:id="@+id/crossCheck"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/instruction"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="241dp"
-        android:layout_marginEnd="247dp"
-        android:layout_marginBottom="232dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginEnd="51dp"
         android:text="View Cross-Check Result" />
+
     <TextView
+        android:id="@+id/instruction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:text = "Hello users!"
-        android:textSize="40dp"/>
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:text = "@string/instruction"
+        android:fontFamily="monospace"
+        android:textColor="@color/black"
+        android:textSize="30dp"/>
 </RelativeLayout>
