--- a/app/src/main/res/layout/activity_calendar10.xml
+++ b/app/src/main/res/layout/activity_calendar10.xml
@@ -980,7 +980,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
                 <Button
-                    android:id="@+id/SaveAndCrosscheck"
+                    android:id="@+id/saveAndCrosscheck10"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_weight="4"
