--- a/app/src/main/res/layout/activity_calendar9.xml
+++ b/app/src/main/res/layout/activity_calendar9.xml
@@ -981,7 +981,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
                 <Button
-                    android:id="@+id/SaveAndCrosscheck"
+                    android:id="@+id/saveAndCrosscheck9"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_weight="4"
