--- a/app/src/main/res/layout/activity_calendar14.xml
+++ b/app/src/main/res/layout/activity_calendar14.xml
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="D14: mm/dd/yyyy"
+                    android:text="D14"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
                     />
