--- a/app/src/main/res/layout/activity_calendar5.xml
+++ b/app/src/main/res/layout/activity_calendar5.xml
@@ -81,7 +81,7 @@
                         android:layout_weight="4"
                         android:gravity="center_horizontal"
                         android:padding="10sp"
-                        android:text="D5: mm/dd/yyyy"
+                        android:text="D5"
                         android:textColor="@color/black" />
                 </TableRow>
 
