--- a/app/src/main/res/layout/activity_calendar7.xml
+++ b/app/src/main/res/layout/activity_calendar7.xml
@@ -79,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="4"
                     android:padding="10sp"
-                    android:text="D7: mm/dd/yyyy"
+                    android:text="D7"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
                     />
