--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -79,13 +79,13 @@
 
     <EditText
         android:id="@+id/enterEmailsInvite"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
+        android:layout_width="253dp"
+        android:layout_height="86dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="monospace"
         android:gravity="start|top"
-        android:hint="Enter your friend's username"
+        android:hint="Enter your friend's username separated with comma and no space"
         android:inputType="textMultiLine"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/CreateEventButton"
