--- a/app/src/main/res/layout/activity_cross_check.xml
+++ b/app/src/main/res/layout/activity_cross_check.xml
@@ -26,7 +26,26 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="@string/crossCheckInstruction"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="50dp"
+        android:fontFamily="monospace"
+        android:gravity="center"/>
+    <EditText
+        android:id="@+id/enterDateXC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="50dp"
+        android:layout_above="@+id/CrossCheckResultsList"
+        android:hint="Enter start date"
+        android:textColorHint="#000000" />
     <EditText
         android:id="@+id/enterUserName"
         android:layout_width="match_parent"
